--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
-/* .div div div img{
-    display: center;
-    margin: 50px;
-} */
+
 #carouselExampleFade{
     display: block;
     max-width: 450px;
     max-height: 450px;
 }
+#subtitulo1{
+    border-bottom: 1px solid rgb(233, 198, 124);
+}
+
 .separador {
     background-color:rgb(233, 198, 124);
     height: 10px;
@@ -16,9 +17,12 @@
 
 .footer {
     margin-top: 75px;
-    background-color: rgb(37, 37, 37);
+    background-color: rgb(160, 160, 160);
     color: #fff;
 }
 .footer div div div i{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 15px;
 }
