--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,26 @@
 #subtitulo1{
     border-bottom: 1px solid rgb(233, 198, 124);
 }
+.subtitulo{
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid rgb(233, 198, 124);
+    margin: 50px;
+}
+
+#subImg1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#subImg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
 
 .separador {
     background-color:rgb(233, 198, 124);
